# rust_oeis

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
