[package]
name = "rust_oeis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.3.9", features = ["derive"]}
reqwest = { version = "0.11.18", features = ["json"]}
serde = "1.0.171"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"]}
